Before CMF 1.6 beta

  Bug Fixes

    - CMFCore.FSPythonScript: FSPythonScripts forgot to add __file__ to
      the script globals. This broke warnings.warn() when a stacklevel
      argument pointing into the script was passed (2).

    - DCWorkflow.exportimport: Workflows managing no permissions at all 
      could make the DCWorkflow workflow exporter fail.
      (http://www.zope.org/Collectors/CMF/397)

    - Removed BBBTransaction class from CMFCore.utils

    - Extension profiles: Fixed import of actions, now they don't
      overwrite all previous actions in the action provider. Fixed
      import of action icons.

  Features

    - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
      interfaces via bridge

    - Back-ported the GenericSetup style of site creation from CMF trunk

    - FSFile: autodetect the encoding of UTF-8 text files with a
      suitable Byte Order Mark (0xEF 0xBB 0xBF).

    - CMFSetup: Split off GenericSetup.
      GenericSetup allows to use CMFSetup functionality outside CMF. See
      the README.txt of GenericSetup for details. 

  Others

    - CMFCore utils: Made _checkPermission depend on Zope's checkPermission.
      There is no longer a need to modify the checkPermission behavior in CMF.

    - Reordered base classes of File and Image, to allow use of super().

    - Made unit tests close the request properly.

    - Changed TypesTool.manage_addTypeInformation method to log a warning
      instead of raise an exception if the typeinfo_name is not found.